# ethproofs_prover

./: .gitignore  Cargo.toml  Makefile  vk.base64
check/: Cargo.toml
check/src/: lib.rs
guest/: Cargo.toml
guest/src/: main.rs  utils.rs
host/: Cargo.toml  build.rs
host/src/: ethproofs_client.rs  main.rs
