[workspace]
resolver = "2"

members = [
    "host",
    "check",
]

[patch."https://github.com/zkMIPS/revme"]
models = {path="../../zkMIPS/revme/models"}
executor = {path="../../zkMIPS/revme/executor"}

[patch."https://github.com/zkMIPS/zkm-project-template"]
zkm-sdk = {path="../zkm-project-template/sdk"}